--- a/package.json
+++ b/package.json
@@ -9,6 +9,6 @@
     "url": "https://github.com/hashlips-lab/nft-erc721-collection.git"
   },
   "scripts": {
-    "build-dapp": "cd smart-contract; yarn; yarn compile; cd ../minting-dapp; yarn; yarn build; cd ../minting-dapp; yarn dev-server;"
+    "build-dapp": "cd smart-contract; yarn; yarn compile; cd ../minting-dapp; yarn; yarn build;"
   }
 }
