--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
-[build]
-  command   = "yarn build-dapp"
-  publish = "minting-dapp/public/build"
+//[build]
+//  command   = "yarn build-dapp"
+//  publish = "minting-dapp/public/build"
 
